# SET_9_String_Sorting_Analyze

./: .gitignore  CMakeLists.txt  README.md
A1m/: main.cpp
A1q/: main.cpp
A1r/: main.cpp
A1rq/: main.cpp
Analysing_Process/: sorting_algorithms_analysis.cpp
Python_Analysing_Results/: main.py  sorts_results.csv
StandardMergeSort/: main.cpp
StandardQuickSort/: main.cpp
